WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291547
AX: [AX Thread Text APIs] visible position text markers don't account for trimmed spaces
https://bugs.webkit.org/show_bug.cgi?id=291547
Summary
AX: [AX Thread Text APIs] visible position text markers don't account for tri...
Joshua Hoffman
Reported
2025-04-14 17:21:12 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-04-14 17:21:26 PDT
<
rdar://problem/149249815
>
Joshua Hoffman
Comment 2
2025-04-14 17:26:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44079
EWS
Comment 3
2025-04-15 11:01:55 PDT
Committed
293717@main
(efb294f5df09): <
https://commits.webkit.org/293717@main
> Reviewed commits have been landed. Closing PR #44079 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug