AX: [AX Thread Text APIs] visible position text markers don't account for trimmed spaces https://bugs.webkit.org/show_bug.cgi?id=291547 rdar://149249815

Reviewed by Tyler Wilcock.

In 293140@main, AXTextRuns started to include spaces that were trimmed at the end of runs. One fallout
from this is that when we convert Visible Positions to text markers, we don't take these trimmed spaces
into account. This means that in caret navigation, the text state change notifications that are being
sent don't properly account for these positions, creating some unexpected behavior.

To fix this, when converting from visible positions to text markers, we can look for DOM offset differences
when text box line's change, and determine when we have a trimmed space we need to account for. This is the
same mechanism we use to construct AXTextRuns.

* LayoutTests/accessibility/mac/caret-browsing-soft-line-breaks-expected.txt: Added.
* LayoutTests/accessibility/mac/caret-browsing-soft-line-breaks.html: Added.
* LayoutTests/accessibility/mac/resources/accessibility-helper.js:
(characterAtStartMarkerOfSelectedTextMarkerRange):
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::textMarkerDataForVisiblePosition):

Canonical link: https://commits.webkit.org/293717@main